--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     background-color: white;
 }
 
-.siliconValley {
+.riverdale {
     width: 50%;
     height:50%;
 }
@@ -52,6 +52,6 @@ button {
 }
 
 body{
-
+background-color: blue;
     margin-left:20px;
 }
